# assembly-graphs

./: .gitignore  CMakeLists.txt  README.md  build.sh
scripts/: README.md  sag2svg.py
tools/cmake/: TestSolution.cmake
